# clai

./: .gitignore  .pre-commit-config.yaml  README.md  clai.sh  manage.sh  pyproject.toml
data/: commands.yml
ops/: docker-compose.yml  mlflow.Dockerfile  start-mlflow.sh
src/config/: settings.py
src/etl/adapters/cli/: run_pipelines.py
src/etl/adapters/zenml/: pipelines.py  steps.py
src/etl/application/: cleaner.py  crawler.py  loader.py
src/etl/domain/: repositories.py  services.py  value_objects.py
src/etl/infrastructure/: exceptions.py  http_repository.py  mongo_repository.py  utils.py
src/rag/adapters/cli/: run_pipelines.py  run_rag.py
src/rag/adapters/zenml/: pipelines.py  steps.py
src/rag/application/: loader.py  parser.py
src/rag/application/evaluators/: evaluator.py
src/rag/application/modules/: plain_rag.py  simple_rag.py
src/rag/application/optimizers/: bootstrap_optimizer.py  knn_optimizer.py
src/rag/application/services/: ingestor.py
src/rag/application/signatures/: command_generator.py
src/rag/application/use_cases/: command_generator.py
src/rag/domain/: entities.py  value_objects.py
src/rag/domain/policies/: command_formatter.py  command_selector.py  eval_metric.py  exact_metric.py  example_parser.py
src/rag/domain/services/: context_builder.py  docpage_parser.py
src/rag/infrastructure/: encoder.py  materializers.py  qdrant_repository.py  utils.py
src/shared/adapters/cli/: manage_settings.py
